--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<style>
-    html, body
-    {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-    }
-</style>
-<canvas id="canvas" width="600" height="600"></canvas>
-<script src="app.js"></script>
+<head>
+    <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+        }
+    </style>
+</head>
+
+<body>
+    <canvas id="canvas" width="600" height="600"></canvas>
+    <script src="app.js"></script>
+</body>
